# src/dto/request/donation-money_request.go
@@ -1,0 +1,6 @@
+package request
+
+type DonationMoneyRequest struct {
+	OngID  uint64  `json:"ong_id" validate:"required"`
+	Amount float32 `json:"amount" validate:"required"`
+}
