# src/dto/request/update-donation_request.go
@@ -1,0 +1,9 @@
+package request
+
+type UpdateDonationRequest struct {
+	Received bool `json:"received" validate:"required,boolean"`
+}
+
+type UpdateDonationMoneyRequest struct {
+	Received bool `json:"received" validate:"required,boolean"`
+}
